--- a/docs/modules/operation/pages/deep-dive/visualizations/dashboard.adoc
+++ b/docs/modules/operation/pages/deep-dive/visualizations/dashboard.adoc
@@ -1,5 +1,6 @@
 
 = {page-component-title} Dashboard
+:description: Learn how to customize OpenNMS Horizon/Meridian's dashboard components: surveillance view, alarms, notifications, outages, and resource graphs.
 
 This section describes the {page-component-title} dashboard and its customization options.
 
