--- a/docs/modules/operation/pages/deep-dive/visualizations/grafana-dashboard-box.adoc
+++ b/docs/modules/operation/pages/deep-dive/visualizations/grafana-dashboard-box.adoc
@@ -1,5 +1,6 @@
 
 = Grafana Dashboard Box
+:description: Learn how OpenNMS Horizon/Meridian uses Grafana to generate visualizations, including those displayed in the Grafana Dashboard Box.
 
 {page-component-title} uses http://grafana.org/[Grafana] to generate visualizations, including those displayed in the Grafana Dashboard Box.
 
