--- a/docs/modules/operation/pages/deep-dive/admin/jmx-config-generator/webui.adoc
+++ b/docs/modules/operation/pages/deep-dive/admin/jmx-config-generator/webui.adoc
@@ -1,5 +1,6 @@
 
 = Web-Based Utility
+:description: Learn how to configure and use the web-based JMX Configuration Generator generator tool with OpenNMS Horizon/Meridian.
 
 Complex JMX data collection configurations can be generated using the web-based tool.
 
