--- a/docs/modules/operation/pages/deep-dive/visualizations/trends.adoc
+++ b/docs/modules/operation/pages/deep-dive/visualizations/trends.adoc
@@ -1,5 +1,6 @@
 
 = Trend
+:description: Learn how to use the Trend feature in OpenNMS Horizon/Meridian to visualize smal inline charts of database-related statistics like node outages.
 
 The Trend feature visualizes small, inline charts of database-related statistics (nodes experiencing outages, unacknowledged alarms, and so on).
 Click menu:Status[Trend] in the top menu bar to view them.
