--- a/docs/modules/reference/pages/telemetryd/protocols/bmp/bmp.adoc
+++ b/docs/modules/reference/pages/telemetryd/protocols/bmp/bmp.adoc
@@ -17,7 +17,7 @@ Those devices can send BMP data to {page-component-title} directly or through a 
 image::bmp/bmp_integration_overview_2.png[width=70%]
 
 The {page-component-title} BMP parser accepts BMP connections from router packets using a TCP listener.
-Three adapters in OpenNMS read BMP data, including an inventory list of connected routers and the peers they are established with, and stats and data about what is being exchanged over those peers:
+Two adapters in OpenNMS read BMP data, including an inventory list of connected routers and the peers they are established with, and stats and data about what is being exchanged over those peers:
 
 * *BMP Telemetry Adapter:* Handles BMP statistics the BMP parser has received and parsed.
 Statistics received from the router are associated as performance data with that router.
