--- a/docs/modules/operation/pages/deep-dive/performance-data-collection/collectd/collection-packages.adoc
+++ b/docs/modules/operation/pages/deep-dive/performance-data-collection/collectd/collection-packages.adoc
@@ -109,6 +109,7 @@ For a list of collector-specific parameters and their default values, refer to t
 
 [caption=]
 .Common service attributes
+[cols="1,3"]
 [options="autowidth"]
 |===
 | Attribute
