--- a/docs/modules/operation/pages/deep-dive/flows/thresholding.adoc
+++ b/docs/modules/operation/pages/deep-dive/flows/thresholding.adoc
@@ -2,14 +2,17 @@
 = Thresholding Flow Applications
 :description: Learn how to create thresholds on flows data in OpenNMS Horizon/Meridian to generate alarms when the traffic amount violates these thresholds.
 
-Flows are categorized in applications using the <<deep-dive/flows/classification-engine.adoc#ga-flow-support-classification-engine, Classification Engine>>.
+The <<deep-dive/flows/classification-engine.adoc#ga-flow-support-classification-engine, Classification Engine>> categorizes flows in applications.
 OpenNMS supports summing up the bytesIn/bytesOut data of flow records based on these flow applications.
 Users can define thresholds on this data to generate alarms when the amount of traffic violates these thresholds.
 
+[[configure-flow-thresholding]]
 == Configure thresholding for flow applications
 
-To enable thresholding for flows you need to enable the `applicationThresholding` flag in the adapter's definition.
-Note that thresholding on flow applications also works without enabling data collection on flow applications.
+To enable thresholding for flows you need to enable the `applicationThresholding` flag in the adapter's definition in `telemetry-configuration.xml`.
+
+Note that you do not need to enable or configure telemetryd on the core to support flows thresholding.
+Thresholding on flow applications also works without enabling data collection on flow applications.
 
 .Example of enabling thresholding for the NetFlow v9 adapter in telemetryd-configuration.xml
 [source, xml]
@@ -94,3 +97,28 @@ You can set the following properties:
 | 900000
 
 |===
+
+== Application threshold behavior
+
+If a flow threshold does not specify an 
+
+To create a flow threshold that applies to all applications (for example, "if any application consumes more than X bandwidth"), use a `match-all` regex expression inside the filter like `.*` to match all applications
+
+//not sure what was meant in the Jira by "But then you could just threshold on the interface statistics."
+
+You cannot apply flows thresholds to the total bandwidth for a location.
+You can apply them only to a single resource; in this case, the interface of the exporting device.
+
+
+== Flow thresholds with Sentinel
+
+{page-component-title} synchronizes thresholds from the core to Sentinels using the key-value store.
+The default implementation uses the default PostgreSQL database.
+
+You do not need to configure thresholds on Sentinel as long as you xref:deep-dive/flows/thresholding.adoc#configure-flow-thresholding [configure flows thresholding] in the core.
+
+Threshold configuration and state are synced dynamically to all places where needed.
+A triggered threshold results in an event, which Sentinel sends back to the core for further processing and transformation into alarms and so on.
+
+
+
