--- a/docs/modules/reference/pages/telemetryd/protocols/bmp/bmp.adoc
+++ b/docs/modules/reference/pages/telemetryd/protocols/bmp/bmp.adoc
@@ -26,6 +26,7 @@ View metrics and statistics related to that peer and apply thresholding.
 * *BMP Peer Status Adapter:* Handles BMP Peer Up and Down messages that the BMP parser receives and parses, and converts them to OpenNMS events.
 Allows alarm creation based on up/down status.
 
+You can configure the parser and adapters in the `telemetryd-configuration.xml` file.
 
 TIP: The https://github.com/OpenNMS-forge/bmp-playground[BMP Playground] provides a virtual lab that you can use to simulate BGP and BMP, and to see how the {page-component-title} components can be configured at runtime.
 
