--- a/docs/modules/reference/pages/telemetryd/protocols/bmp/integration-adapter.adoc
+++ b/docs/modules/reference/pages/telemetryd/protocols/bmp/integration-adapter.adoc
@@ -3,7 +3,7 @@
 = OpenBMP Integration Adapter
 
 The OpenBMP integration adapter can integrate with an existing https://github.com/OpenBMP[OpenBMP] installation.
-It handles BMP messages the xref:telemetryd/protocols/bmp/parser.adoc[BMP Parser] receives and parses, and creates OpenBMP-compatible messages, which are then passed to the OpenBMP Kafka cluster.
+It handles BMP messages the xref:telemetryd/protocols/bmp/parser.adoc[BMP parser] receives and parses, and creates OpenBMP-compatible messages, which are then passed to the OpenBMP Kafka cluster.
 
 This setup replaces the collector component of OpenBMP.
 
