--- a/docs/modules/reference/pages/telemetryd/protocols/bmp/parser.adoc
+++ b/docs/modules/reference/pages/telemetryd/protocols/bmp/parser.adoc
@@ -14,7 +14,7 @@ The BMP parser accepts BMP connections from router packets using a <<telemetryd/
 
 == Configuration and use
 
-.Optional parameters for the BMP Parser
+.Optional parameters for the BMP parser
 [options="header", cols="1,3,1"]
 |===
 | Parameter
