--- a/docs/modules/reference/pages/performance-data-collection/collectors/vmware-cim.adoc
+++ b/docs/modules/reference/pages/performance-data-collection/collectors/vmware-cim.adoc
@@ -1,5 +1,6 @@
 
 = VmwareCimCollector
+:description: Learn how to configure the VmwareCimCollector in OpenNMS Horizon/Meridian to collect ESXi host and sensor metrics from vCenter.
 
 The VmwareCimCollector collects ESXi host and sensor metrics from vCenter.
 
