--- a/docs/modules/reference/pages/performance-data-collection/collectors/wsman.adoc
+++ b/docs/modules/reference/pages/performance-data-collection/collectors/wsman.adoc
@@ -1,6 +1,7 @@
 
 [[ga-performance-mgmt-collectors-wsman-collector]]
 = WsManCollector
+:description: Learn how to configure the WsManCollector in OpenNMS Horizon/Meridian to collect performance metrics using the Web Services-Management protocol.
 
 The WsManCollector collects performance metrics using the Web Services-Management (WS-Management) protocol.
 
