--- a/docs/modules/reference/pages/performance-data-collection/collectors/xml.adoc
+++ b/docs/modules/reference/pages/performance-data-collection/collectors/xml.adoc
@@ -1,5 +1,6 @@
 
 = XmlCollector
+:description: Learn how to configure the XmlCollector in OpenNMS Horizon/Meridian to collect and extract metrics from XML and JSON documents.
 
 The XmlCollector collects and extracts metrics from XML and JSON documents.
 
