--- a/opennms-assemblies/sentinel/src/main/filtered/debian/changelog
+++ b/opennms-assemblies/sentinel/src/main/filtered/debian/changelog
@@ -1,3 +1,12 @@
+opennms-sentinel (32.0.3-1) stable; urgency=medium
+
+  * Minor release containing several bug fixes and documentation improvements.
+
+    For details on what has changed, see:
+    https://docs.opennms.com/horizon/32.0.3/index.html
+
+ -- OpenNMS Release Manager <opennms@opennms.org>  Tue, 12 Sep 2023 14:32:00 -0400
+
 opennms-sentinel (32.0.2-1) stable; urgency=medium
 
   * Minor release containing several bug fixes and documentation improvements.
