DP-82: Add meta descriptions to each page in the reference guide
DP-82: Add meta descriptions to each page in the reference guide - added meta descriptions to part of the monitors section. WIP.

--- a/docs/modules/reference/pages/service-assurance/monitors/AvailabilityMonitor.adoc
+++ b/docs/modules/reference/pages/service-assurance/monitors/AvailabilityMonitor.adoc
@@ -1,5 +1,6 @@
 
 = AvailabilityMonitor
+:description: Get information on the deprecated AvailabilityMonitor used in legacy versions of OpenNMS Horizon/Meridian.
 
 NOTE: This monitor has been superseded by the <<service-assurance/monitors/IcmpMonitor.adoc#poller-icmp-monitor, IcmpMonitor>>.
 
