--- a/docs/modules/reference/pages/service-assurance/monitors/DhcpMonitor.adoc
+++ b/docs/modules/reference/pages/service-assurance/monitors/DhcpMonitor.adoc
@@ -1,5 +1,6 @@
 
 = DhcpMonitor
+:description: Learn about the DHCPMonitor in OpenNMS Horizon/Meridian that checks the availability and functionality of DHCP servers.
 
 Use this monitor to check the availability and functionality of DHCP servers.
 The DhcpMonitor is run by Pollerd and opens a background process to listen for incoming DHCP responses.
