--- a/docs/modules/reference/pages/service-assurance/monitors/FtpMonitor.adoc
+++ b/docs/modules/reference/pages/service-assurance/monitors/FtpMonitor.adoc
@@ -1,5 +1,7 @@
 
 = FtpMonitor
+= DskTableMonitor
+:description: Learn about the FtpMonitor in OpenNMS Horizon/Meridian that validates an FTP connection's login processes.
 
 The FtpMonitor validates an FTP connection's login processes.
 The monitor can test the FTP server on multiple ports with specific login data.
