--- a/docs/modules/reference/pages/service-assurance/monitors/WmiMonitor.adoc
+++ b/docs/modules/reference/pages/service-assurance/monitors/WmiMonitor.adoc
@@ -1,5 +1,6 @@
 
 = WmiMonitor
+:description: Learn how to configure and use the WmiMonitor in OpenNMS Horizon/Meridian to test the availability of WMI services on remote interfaces.
 
 The WMI monitor tests the availability of WMI services on remote interfaces.
 
