--- a/docs/modules/operation/pages/deep-dive/flows/thresholding.adoc
+++ b/docs/modules/operation/pages/deep-dive/flows/thresholding.adoc
@@ -11,7 +11,7 @@ Users can define thresholds on this data to generate alarms when the amount of t
 
 To enable thresholding for flows you need to enable the `applicationThresholding` flag in the adapter's definition in `telemetry-configuration.xml`.
 
-Note that you do not need to enable or configure telemetryd on the core to support flows thresholding.
+Note that you do not need to enable or configure telemetryd on the core to support flows thresholding if you are using Sentinels for processing telemetryd data.
 Thresholding on flow applications also works without enabling data collection on flow applications.
 
 .Example of enabling thresholding for the NetFlow v9 adapter in telemetryd-configuration.xml
@@ -116,8 +116,6 @@ You may want to create a flow threshold that applies to all applications; for ex
 
 To apply a flow threshold to all applications, use a `match-all` regex expression like `.*` inside the filter.
 
-//not sure what was meant in the Jira by "But then you could just threshold on the interface statistics."
-
 === Flows thresholds per application
 
 Note that you cannot apply flows thresholds to the total bandwidth for a location.
@@ -128,8 +126,7 @@ You can apply them only to a single resource; in this case, the interface of the
 {page-component-title} synchronizes thresholds from the core to Sentinels using the key-value store.
 The default implementation uses the default PostgreSQL database.
 
-You do not need to configure thresholds on Sentinel as long as you xref:deep-dive/flows/thresholding.adoc#configure-flow-thresholding [configure flows thresholding] in the core.
+You do not need to configure thresholds on Sentinel; just make sure you have enabled the `applicationThresholding` flag in the adapter's definition in `telemetry-configuration.xml` as described in xref:deep-dive/flows/thresholding.adoc#configure-flow-thresholding [configure thresholding for flows applications].
 
 Threshold configuration and state are synced dynamically to all places where needed.
 A triggered threshold results in an event, which Sentinel sends back to the core for further processing and transformation into alarms, and so on.
-
