--- a/docs/modules/reference/pages/telemetryd/listeners/introduction.adoc
+++ b/docs/modules/reference/pages/telemetryd/listeners/introduction.adoc
@@ -1,5 +1,6 @@
 
 [[ref-listener]]
 = Listener Reference
+:description: Overview of telemetryd listener documentation in OpenNMS Horizon/Meridian.
 
-This section describes the available Telemetryd listeners.
+This section describes the available telemetryd listeners.
