--- a/docs/modules/reference/pages/provisioning/adapters/snmp-asset.adoc
+++ b/docs/modules/reference/pages/provisioning/adapters/snmp-asset.adoc
@@ -1,5 +1,6 @@
 [[adapter-snmp-asset]]
 = SNMP Asset
+:description: Learn how to configure and use the SNMP asset adapter to collect SNMP values and populate asset records for nodes in OpenNMS Horizon/Meridian.
 
 The SNMP asset provisioning adapter collects SNMP values to populate asset records for the node.
 This can be very useful for automatically populating asset fields in a large number of managed systems.
