--- a/docs/modules/reference/pages/provisioning/handlers/vmware.adoc
+++ b/docs/modules/reference/pages/provisioning/handlers/vmware.adoc
@@ -3,6 +3,8 @@
 
 [[vmware-handler]]
 = VMWare Handler
+:description: Learn how to use and configure the VMware adapter to pull hosts and/or virtual machines from a vCenter server into OpenNMS Horizon/Meridian.
+//should this be in the Adapters section? Was it perhaps not moved because of the link concern?
 
 The VMware adapter pulls hosts and/or virtual machines from a vCenter server into {page-component-title}.
 With this adapter, you can automatically add, update, or remove nodes from your {page-component-title} based on the status of the VMware entity.
