--- a/docs/modules/reference/pages/provisioning/policies/metadata.adoc
+++ b/docs/modules/reference/pages/provisioning/policies/metadata.adoc
@@ -1,9 +1,12 @@
 = Metadata Policies
+:description: Learn about the node and interface metadata policies in OpenNMS Horizon/Meridian to set metadata for provisioned nodes and discovered interfaces on them.
 
 == Node metadata policy
 
-The Metadata Policy lets you set node-level metadata in the context `requisition` for provisioned nodes.
+The Metadata policy lets you set node-level metadata in the context `requisition` for provisioned nodes.
 
 == Interface metadata policy
 
-The Metadata Policy lets you set interface-level metadata in the context `requisition` for discovered interfaces on provisioned nodes.
+The Interface Metadata policy lets you set interface-level metadata in the context `requisition` for discovered interfaces on provisioned nodes.
+
+//this section seems sparse
