Apply suggestions from code review
Co-authored-by: mmahacek <mmahacek@opennms.com>

--- a/docs/modules/reference/pages/provisioning/adapters/rdns.adoc
+++ b/docs/modules/reference/pages/provisioning/adapters/rdns.adoc
@@ -1,6 +1,6 @@
 [[adapter-rdns]]
 = Reverse DNS
-:description: Learn how the DDNS adapter uses the dynamic DNS protocol to send updated PTR DNS records to your DNS system when OpenNMS Horizon/Meridian provisions nodes.
+:description: Learn how the RDNS adapter uses the dynamic DNS protocol to send updated PTR DNS records to your DNS system when OpenNMS Horizon/Meridian provisions nodes.
 
 The DDNS adapter uses the dynamic DNS protocol to send updated PTR DNS records to your DNS system as nodes are provisioned into {page-component-title}.
 
