--- a/docs/modules/reference/pages/daemons/daemon-config-files/pollerd.adoc
+++ b/docs/modules/reference/pages/daemons/daemon-config-files/pollerd.adoc
@@ -1,6 +1,7 @@
 
 [[ref-daemon-config-files-pollerd]]
 = Pollerd
+:description: Learn about pollerd in OpenNMS {page-component-title}, which performs service assurance monitor checks to determine device availability.
 
 Performs xref:operation:deep-dive/service-assurance/introduction.adoc[service assurance] monitor checks to determine device availability.
 
