--- a/docs/modules/reference/pages/daemons/daemon-config-files/syslogd.adoc
+++ b/docs/modules/reference/pages/daemons/daemon-config-files/syslogd.adoc
@@ -1,6 +1,7 @@
 
 [[ref-daemon-config-files-syslogd]]
 = Syslogd
+:description: Learn about syslogd in OpenNMS {page-component-title}, which processes syslog messages into events.
 
 Handles processing of xref:operation:deep-dive/events/sources/syslog.adoc[syslog messages] into events.
 
