--- a/docs/modules/operation/pages/deep-dive/events/event-definition.adoc
+++ b/docs/modules/operation/pages/deep-dive/events/event-definition.adoc
@@ -18,7 +18,8 @@ If a node is found, the `nodeId` attribute will be dynamically set on the event,
 Events are structured historical records of things that happen in {page-component-title} and the nodes, interfaces, and services it monitors.
 Every event has a number of fixed fields and zero or more parameters.
 
-.Mandatory fields
+*Mandatory fields*
+
 UEI (Unique Event Identifier)::
     A String that uniquely identifies the event's type.
     UEIs are typically formatted in the style of a URI, but the only requirement is that they start with `uei.`.
@@ -51,7 +52,8 @@ Severity::
 Event ID::
     A numeric identifier used to look up a specific event in the {page-component-title} system.
 
-.Notable optional fields
+*Notable optional fields*
+
 Operator Instruction::
     A set of instructions for an operator to respond appropriately to an event of this type.
 Alarm Data::
